Changed abbreviation of Chinese to "C."

--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -495,18 +495,18 @@ The monks accepted his instructions and listened.
 1. {:#n1}This is <em>sūtra</em> no. 10 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0052c17" target="_blank">T1.1.52c17-7b24</a>). It’s direct parallels to this sūtra include <a href="https://suttacentral.net/dn34" target="_blank">DN 34</a>, <a href="DA_9.html" target="_blank">DĀ 9</a>, and <a href="https://cbetaonline.dila.edu.tw/zh/T0013_001" target="_blank">T13</a>. [\[back\]](#ref1)
 2. {:#n2}*Gargarā*. C. 伽伽 (MC. g’ia-g’ia), P. Gaggarā, S. Gargarā, BHS Gargā. The Chinese transliteration appears to be old Pkt \*Gaggā, which in BHS became Gargā, and in S. Gargarā, which begs the question whether P. Gaggarā was a translation from S. I’ve adopted the S. attestation. [\[back\]](#ref2)
 3. {:#n3}Śāriputra’s opening statement is a gāthā in both DN 34 and an extent S. edition of this sūtra, but it’s in prose both here and in the older Chinese translation by An Shigao. [\[back\]](#ref3)
-4. {:#n4}*Constant mindfulness of oneself*. Ch. 常自念身, P. kāyagatā sati sātasahagatā, S. kāyagatā smrtiḥ. The Chinese might also be read “Constant mindfulness of one’s body.” [\[back\]](#ref4)
-5. {:#n5}*Contemplation of the foul discharges*. Ch. 惡露觀. This is synonymous with the contemplation of foulness (P. asubha bhāvana) according to a passage in the *Dharmaguptaka Vinaya* (T1428.582a4-6). [\[back\]](#ref5)
+4. {:#n4}*Constant mindfulness of oneself*. C. 常自念身, P. kāyagatā sati sātasahagatā, S. kāyagatā smrtiḥ. The Chinese might also be read “Constant mindfulness of one’s body.” [\[back\]](#ref4)
+5. {:#n5}*Contemplation of the foul discharges*. C. 惡露觀. This is synonymous with the contemplation of foulness (P. asubha bhāvana) according to a passage in the *Dharmaguptaka Vinaya* (T1428.582a4-6). [\[back\]](#ref5)
 6. {:#n6}*central country*. I.e., a civilized region rather than a frontier region that’s barbaric. The conditions in lawless regions in the ancient world was not conducive to practicing. In India, a central country would be places like Śrāvastī and Magadha. [\[back\]](#ref6)
 7. {:#n7}This list differs from that found in Theravāda and Sarvâstivāda parallels. There is a lengthy commentary on this version of the seven concepts found in the *Śāriputra Abhidharma* (cf. T1548.638b9ff). [\[back\]](#ref7)
 8. {:#n8}*Changes to the senses*. C. 除入, P. abhibhāyatanāni, S. abhibhvāyatanāni. On the face of it, the Chinese appears to mean “eliminated” or “removed,” as these are the most common readings for 除. In Pali and Sanskrit sources, the term is interpreted as P. abhibhā, or “mastery,” and this is confirmed by later Chinese translations of Sanskrit Abhidharma. Interestingly, an equivalent reading (除處) is found in MĀ 215 (T26.799c25) for these eight perceptions. However, the *Śāriputra Abhidharma* (cf. 1548.642a19ff.) calls the list 勝入 (“overcoming the senses”), so both readings existed in translations of pre-Sanskrit texts. Given this situation, it’s important to note that 除 has less frequent readings in classical Chinese as “to govern, fix, correct” and “to change, turn over (e.g., a new year).” They may be closer to the intended meaning in these older translations than the usual readings. I’ve translated the term accordingly. [\[back\]](#ref8)
 9. {:#n9}The *Śāriputra Abhidharma* (T1548.639b16ff.) describes the oppressive fear that arises when one’s death is imminent to explain the concept of the pain of impermanence. Thus, it’s the unpleasant feelings one has when facing one’s mortality. [\[back\]](#ref9)
 10. {:#n10}The *Śāriputra Abhidharma* (T1548.639c2ff.) describes the lack of tranquility and right liberation that results from supposing that the awareness, body, and external things are oneself or belong to oneself. [\[back\]](#ref10)
 11. {:#n11}This list occurs in the *Śāriputra Abhidharma* (T1548.654c27) without elaboration. I’ve corrected the reading of the first item by adopting an alternate reading that agrees with the Abhidharma passage and deleted the repetition at the end. It would appear that a well-meaning editor didn’t understand that the items were being counted rather than the statements and revised the list to create a ninth statement. [\[back\]](#ref11)
-12. {:#n12}*formations*. Ch. 集. The parallel in T1548 has 覺 instead, which suggests S. *vitarka* or *saṃkalpa* in the Indic original. The meaning in that case would be along the lines of perception, idea, or awareness. [\[back\]](#ref12)
-13. {:#n13}*Patience*. Ch. 含受, P. khama. The same passage in DĀ 11 reads 堪忍 instead, which agrees with the Pali parallel. 含受 is unclear in meaning. Perhaps the 堪忍 in DĀ 11 was an improved translation that didn’t replace this earlier attempt. [\[back\]](#ref13)
+12. {:#n12}*formations*. C. 集. The parallel in T1548 has 覺 instead, which suggests S. *vitarka* or *saṃkalpa* in the Indic original. The meaning in that case would be along the lines of perception, idea, or awareness. [\[back\]](#ref12)
+13. {:#n13}*Patience*. C. 含受, P. khama. The same passage in DĀ 11 reads 堪忍 instead, which agrees with the Pali parallel. 含受 is unclear in meaning. Perhaps the 堪忍 in DĀ 11 was an improved translation that didn’t replace this earlier attempt. [\[back\]](#ref13)
 14. {:#n14}The items in this list are discussed in the *Śāriputra Abhidharma* (T1548.588b23 ff). [\[back\]](#ref14)
-15. {:#n15}*guards*. Ch. 捨, P. rakkha. It would seem 捨 is a mistake for 護, which would be understandable if a copyist thought the intended meaning was equanimity, given that these two terms were both common translations of S. upekṣa. However, various Abhidharma definitions, including the one found in the *Śāriputra Abhidharma*, agree that the meaning is to guard one thing. I’ve translated accordingly. [\[back\]](#ref15)
+15. {:#n15}*guards*. C. 捨, P. rakkha. It would seem 捨 is a mistake for 護, which would be understandable if a copyist thought the intended meaning was equanimity, given that these two terms were both common translations of S. upekṣa. However, various Abhidharma definitions, including the one found in the *Śāriputra Abhidharma*, agree that the meaning is to guard one thing. I’ve translated accordingly. [\[back\]](#ref15)
 
 ---
 
