--- a/01_agama/dirgha/DA_13.md
+++ b/01_agama/dirgha/DA_13.md
@@ -371,8 +371,8 @@ next: DA_14.html
 ### Notes
 
 1. {:#n1}This is <em>sūtra</em> no. 13 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0060a28" target="_blank">T1.1.60a28-2b27</a>). Parallels for this <em>sūtra</em> include <a href="https://suttacentral.net/dn15" target="_blank">DN 15</a>, <a href="https://suttacentral.net/ma97" target="_blank">MĀ 97</a>, <a href="https://cbetaonline.dila.edu.tw/zh/T0014_001" target="_blank">T14</a>, and <a href="https://cbetaonline.dila.edu.tw/zh/T0052_001" target="_blank">T52</a>. [\[back\]](#ref1)
-2. {:#n2}*Kuru*. Ch. 拘流沙, P. Kurūsu, S. Kuruṣu.\\
-*Kalmāṣa’s Residence*. Ch. 劫摩沙住處, P. Kammāsadamma, S. Kalmāṣadamya. [\[back\]](#ref2)
+2. {:#n2}*Kuru*. C. 拘流沙, P. Kurūsu, S. Kuruṣu.\\
+*Kalmāṣa’s Residence*. C. 劫摩沙住處, P. Kammāsadamma, S. Kalmāṣadamya. [\[back\]](#ref2)
 3. {:#n3}While this introduction presents the classic twelve links of dependent origination, there will only be ten links discussed later in the sutra. When we compare the introductions in the direct parallels, we find four different versions while the body of the sutra presents the same ten links. This suggests to me that the introduction is a later addition to an older sutra. [\[back\]](#ref3)
 
 ---
