--- a/01_agama/dirgha/DA_14.md
+++ b/01_agama/dirgha/DA_14.md
@@ -498,7 +498,7 @@ Asked the Tathāgata about his meaning.”
 
 1. {:#n1}This is <em>sūtra</em> no. 14 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0062b28" target="_blank">T1.1.62b28-6a3</a>). Parallels for this <em>sūtra</em> include <a href="https://suttacentral.net/dn21" target="_blank">DN 21</a>, <a href="https://suttacentral.net/ma134" target="_blank">MĀ 134</a>, <a href="https://cbetaonline.dila.edu.tw/zh/T0015_001" target="_blank">T15</a>, and <a href="https://cbetaonline.dila.edu.tw/zh/T04n0203_p0476a17" target="_blank">T203.73</a>. [\[back\]](#ref1)
 2. {:#n2}*Bhadrā … your father*. Bhadrā was the daughter of the king of gandharvas. Śakra indicates at the conclusion of the present sutra that Pañcaśikha was her suitor. [\[back\]](#ref2)
-3. {:#n3}*error*. Ch. 調戲. This is presumably a translation of S. prapañca (P. papañca). This is difficult term to pin down in Indic sources, being variously interpreted as proliferation, activity, and error or false ideas. The Chinese translation adds to the difficulty because it could be read as restlessness or agitation (S. auddhatya, P. uddhacca) but can mean reckless or wild behavior. Given the way the term appears to take on both epistemological and moral meanings in the passages that follow, I’ve opted for “error” as a translation, assuming the original was indeed S. prapañca. The Japanese translators agree, translating it as “false ideas.” [\[back\]](#ref3)
+3. {:#n3}*error*. C. 調戲. This is presumably a translation of S. prapañca (P. papañca). This is difficult term to pin down in Indic sources, being variously interpreted as proliferation, activity, and error or false ideas. The Chinese translation adds to the difficulty because it could be read as restlessness or agitation (S. auddhatya, P. uddhacca) but can mean reckless or wild behavior. Given the way the term appears to take on both epistemological and moral meanings in the passages that follow, I’ve opted for “error” as a translation, assuming the original was indeed S. prapañca. The Japanese translators agree, translating it as “false ideas.” [\[back\]](#ref3)
 
 ---
 
