--- a/01_agama/dirgha/DA_15.md
+++ b/01_agama/dirgha/DA_15.md
@@ -404,8 +404,8 @@ It could only bark like a jackal.’
 ### Notes
 
 1. {:#n1}This is <em>sūtra</em> no. 15 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0066a09" target="_blank">T1.1.66a9-70a18</a>). Parallels for this <em>sūtra</em> include <a href="https://suttacentral.net/dn24" target="_blank">DN 24</a> and a few Sanskrit fragments. [\[back\]](#ref1)
-2. {:#n2}*Anomiya … Maineya*. Ch. (MCh.) 阿㝹夷 (a-neu-i) … 冥寧 (mieng-nieng), P. Anupiya … Mallesu. I’ve adopted the Sanskrit place names found in the *Mahāvastu*, which match the Chinese transliterations better than the Pali. [\[back\]](#ref2)
-3. {:#n3}*Licchavi … Sunakṣatra*. Ch. 隸車 (MCh. liei-t’śia) 子 善宿. The Chinese is a hybrid of transliteration and translation. “Licchavi-” is transliterated (隸車), while “-putra” (子) and “Sunakṣatra” (善宿) are translated. 善宿 literally means “good” (su-) “constellation” (-nakṣatra), which agrees with the Sanskrit meaning of the name (“[born under a] good astrological sign”). [\[back\]](#ref3)
+2. {:#n2}*Anomiya … Maineya*. C. (MCh.) 阿㝹夷 (a-neu-i) … 冥寧 (mieng-nieng), P. Anupiya … Mallesu. I’ve adopted the Sanskrit place names found in the *Mahāvastu*, which match the Chinese transliterations better than the Pali. [\[back\]](#ref2)
+3. {:#n3}*Licchavi … Sunakṣatra*. C. 隸車 (MCh. liei-t’śia) 子 善宿. The Chinese is a hybrid of transliteration and translation. “Licchavi-” is transliterated (隸車), while “-putra” (子) and “Sunakṣatra” (善宿) are translated. 善宿 literally means “good” (su-) “constellation” (-nakṣatra), which agrees with the Sanskrit meaning of the name (“[born under a] good astrological sign”). [\[back\]](#ref3)
 4. {:#n4}*Nirgrantha disciple*. That is, a disciple of Nirgrantha Jñāniputra, the founder of the Jain religion. [\[back\]](#ref4)
 5. {:#n5}*Mourning Park … Elephant … Many Sons … Seven Copses*. These names were translated to Chinese. The Pali equivalents are Udena, Gotamaka, Sattamba, Bahuputta. The first two Chinese names don’t seem to match the Pali, but the last two do (although in reverse order). I’ve translated them to English for the time being, as the Sanskrit equivalents are obscure to me. [\[back\]](#ref5)
 
