--- a/01_agama/dirgha/DA_16.md
+++ b/01_agama/dirgha/DA_16.md
@@ -333,8 +333,8 @@ Like the ocean swelled by many rivers.”
 ### Notes
 
 1. {:#n1}This is <em>sūtra</em> no. 16 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0070a19" target="_blank">T1.1.70a19-2c6</a>). The direct parallels for this <em>sūtra</em> are <a href="https://suttacentral.net/dn31" target="_blank">DN 31</a> and <a href="https://suttacentral.net/ma135" target="_blank">MĀ 135</a>. There are also alternate Chinese translations by An Shigao (<a href="https://cbetaonline.dila.edu.tw/zh/T0016_001" target="_blank">T16</a>) and Zhi Fadu (<a href="https://cbetaonline.dila.edu.tw/zh/T0017_001" target="_blank">T17</a>). As we shall see, DĀ 16 agrees with DN 31 more than the Sarvāstivāda version found in MĀ. [\[back\]](#ref1)
-2. {:#n2}*Sujāta*. Ch. 善生. I’ve yet to find a Sanskrit attestation to this reading, but it seems the most likely name that 善生 (“Well Born”) translated. MĀ 135 and T17 also translate his name as 善生, but An Shigao seems to transliterate an equivalent of P. Siṅgāla (S. Śṛgāla), which means “jackal.” These parallels disagree in other details as well, indicating at least two or three versions. [\[back\]](#ref2)
-3. {:#n3}*panica ... talava ... suhana*. These transliterations are obscure to us today. Ch. 波內早 (MCh. bo-nei-zhao) might be a word like panica. Ch. 多羅槃 (MCh. duō-luó-pan) might be S. talava (“musician”) or a related word. Ch. 首呵那 (Man. shǒu-he-na) seems to be a word like suhana, but in S it would mean “easily killed.” [\[back\]](#ref3)
+2. {:#n2}*Sujāta*. C. 善生. I’ve yet to find a Sanskrit attestation to this reading, but it seems the most likely name that 善生 (“Well Born”) translated. MĀ 135 and T17 also translate his name as 善生, but An Shigao seems to transliterate an equivalent of P. Siṅgāla (S. Śṛgāla), which means “jackal.” These parallels disagree in other details as well, indicating at least two or three versions. [\[back\]](#ref2)
+3. {:#n3}*panica ... talava ... suhana*. These transliterations are obscure to us today. C. 波內早 (MCh. bo-nei-zhao) might be a word like panica. C. 多羅槃 (MCh. duō-luó-pan) might be S. talava (“musician”) or a related word. C. 首呵那 (Man. shǒu-he-na) seems to be a word like suhana, but in S it would mean “easily killed.” [\[back\]](#ref3)
 
 ---
 
