--- a/01_agama/dirgha/DA_17.md
+++ b/01_agama/dirgha/DA_17.md
@@ -352,16 +352,16 @@ next: DA_18.html
 ### Notes
 
 1. {:#n1}This is <em>sūtra</em> no. 17 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0072c12" target="_blank">T1.1.72c12-6b22</a>). The direct parallel for this sutra are <a href="https://suttacentral.net/dn29" target="_blank">DN 29</a>. [\[back\]](#ref1)
-2. {:#n2}*Vedhañña*. Ch. 緬祇 (MCh. mian-g’jie). The Chinese transliteration doesn’t match the Pali parallel, but I’ve adopted it since I lack a Sanskrit attestation. [\[back\]](#ref2)
+2. {:#n2}*Vedhañña*. C. 緬祇 (MCh. mian-g’jie). The Chinese transliteration doesn’t match the Pali parallel, but I’ve adopted it since I lack a Sanskrit attestation. [\[back\]](#ref2)
 3. {:#n3}This list of the twelve sutra genres (aṅga) is part transliteration and part translation in the Chinese. Some translations aren’t expected and don’t appear to match the usual meanings of the traditional list. The typical list of 12 sutra genres include (in S) *sūtra, geya, vyākaraṇa, gāthā, udāna, itivṛttaka, jātaka, nidāna, vaipulya, adbhuta-dharma, avadāna,* and *upadeśa*. The Chinese literally reads: 貫經 (threaded sutra), 祇夜經 (*geya* sutra), 受記經 (giving prediction sutra) 偈經 (*gāthā* sutra), 法句經 (Dharma aphorism sutra), 相應經 (connected sutra), 本緣經 (legend sutra), 天本經 (root of heaven sutra), 廣經 (extensive sutra), 未曾有經 (unprecedented sutra), 譬喻經 (parable sutra), 大教經 (great teaching sutra). The Japanese translators considered 法句 to translate *udāna*, 相應 *itivṛttaka*, 天本 *nidāna*, and 大教 *upadeśa*. [\[back\]](#ref3)
-4. {:#n4}*gate’s threshold*. Ch. 門閫, P. *indakhīla*. This refers to a post driven into the ground to which a gate is fastened or set against when closed. [\[back\]](#ref4)
-5. {:#n5}*first night … last night*. Ch. 初夜 … 末後夜. The context of his teachings being true during this time suggests to me that it refers instead to his entire teaching career from his awakening to his *parinirvāṇa*. This also agrees with the interpretation that was added to the Pali parallel. [\[back\]](#ref5)
+4. {:#n4}*gate’s threshold*. C. 門閫, P. *indakhīla*. This refers to a post driven into the ground to which a gate is fastened or set against when closed. [\[back\]](#ref4)
+5. {:#n5}*first night … last night*. C. 初夜 … 末後夜. The context of his teachings being true during this time suggests to me that it refers instead to his entire teaching career from his awakening to his *parinirvāṇa*. This also agrees with the interpretation that was added to the Pali parallel. [\[back\]](#ref5)
 6. {:#n6}The views listed in this section have a closer parallel in DN 9 than DN 29. [\[back\]](#ref6)
-7. {:#n7}*the soul is the body*. Ch. 是命是身. The Chinese appears to be a literal translation equivalent to P. *taṁ jīvaṁ taṁ sarīraṁ*.\\
-*the soul is different than the body*. Ch. 命異身異. This appears to match P. *aññaṁ jīvaṁ aññaṁ sarīraṁ*. [\[back\]](#ref7)
-8. {:#n8}*views about the past*. Ch. 本生本見. This is an uncertain expression that might be read literally as “views about the past and past births” or “views about the past arising from the past.” The parallel in DN 29 reads P. *pubbantasahagatā diṭṭhinissayā* (“support for views related to the past”). [\[back\]](#ref8)
-9. {:#n9}*views about the future*. Ch. 未見未生, P. *aparantasahagatā diṭṭhinissayā*. [\[back\]](#ref9)
-10. {:#n10}*its end comes from conception*. Ch. 從想有終. “End” (終) refers to the end of life, or death. The intended meaning of this expression is mysterious, but it may be related to the expression we find in DN 1/DĀ 21, where views are listed such as: “After I die, I’ll be born with … conception (saññā).” But, here, conception appears to bring about the self’s end rather than follow death. In the direct Pali parallel to the present passage in DN 29, there is a reference to death but not conception: *rūpī attā hoti arogo paraṁ maraṇā* (“after death, the self is physical and unharmed”). [\[back\]](#ref10)
+7. {:#n7}*the soul is the body*. C. 是命是身. The Chinese appears to be a literal translation equivalent to P. *taṁ jīvaṁ taṁ sarīraṁ*.\\
+*the soul is different than the body*. C. 命異身異. This appears to match P. *aññaṁ jīvaṁ aññaṁ sarīraṁ*. [\[back\]](#ref7)
+8. {:#n8}*views about the past*. C. 本生本見. This is an uncertain expression that might be read literally as “views about the past and past births” or “views about the past arising from the past.” The parallel in DN 29 reads P. *pubbantasahagatā diṭṭhinissayā* (“support for views related to the past”). [\[back\]](#ref8)
+9. {:#n9}*views about the future*. C. 未見未生, P. *aparantasahagatā diṭṭhinissayā*. [\[back\]](#ref9)
+10. {:#n10}*its end comes from conception*. C. 從想有終. “End” (終) refers to the end of life, or death. The intended meaning of this expression is mysterious, but it may be related to the expression we find in DN 1/DĀ 21, where views are listed such as: “After I die, I’ll be born with … conception (saññā).” But, here, conception appears to bring about the self’s end rather than follow death. In the direct Pali parallel to the present passage in DN 29, there is a reference to death but not conception: *rūpī attā hoti arogo paraṁ maraṇā* (“after death, the self is physical and unharmed”). [\[back\]](#ref10)
 
 ---
 
