--- a/01_agama/dirgha/DA_23.md
+++ b/01_agama/dirgha/DA_23.md
@@ -508,8 +508,8 @@ Should support the three jewels.”
 ### Notes
 
 1. {:#n1}This is <em>sūtra</em> no. 23 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0096c16" target="_blank">T1.1.96c16-101b8</a>).This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/dn5" target="_blank">DN 5</a>. [\[back\]](#ref1)
-2. {:#n2}*[Khānumata]*. Ch. 佉㝹婆提 (MCh. K’ia-neu-b’ua-d’iei) suggests a different pronunciation, such as *Khanuvati. A Sanskrit edition exists that would provide a parallel name for this town, but it remains unpublished to date. I’ve retained the Pali name for the time being. [\[back\]](#ref2)
-3. {:#n3}*Kūṭatāṇḍya*. Ch. 究羅檀頭 (MCh. Kieu-la-d’an-d’eu), P. Kūṭadanta. I’ve adopted the S. attestation, but the Chinese transliteration suggests something like \*Kulatandu. [\[back\]](#ref3)
+2. {:#n2}*[Khānumata]*. C. 佉㝹婆提 (MCh. K’ia-neu-b’ua-d’iei) suggests a different pronunciation, such as *Khanuvati. A Sanskrit edition exists that would provide a parallel name for this town, but it remains unpublished to date. I’ve retained the Pali name for the time being. [\[back\]](#ref2)
+3. {:#n3}*Kūṭatāṇḍya*. C. 究羅檀頭 (MCh. Kieu-la-d’an-d’eu), P. Kūṭadanta. I’ve adopted the S. attestation, but the Chinese transliteration suggests something like \*Kulatandu. [\[back\]](#ref3)
 4. {:#n4}See the notes to [DĀ 20](DA_20.html#notes){: target="_blank"} for comments about the various proper names in this and the next couple paragraphs. [\[back\]](#ref4)
 
 ---
