--- a/01_agama/dirgha/DA_30-8.md
+++ b/01_agama/dirgha/DA_30-8.md
@@ -588,8 +588,8 @@ Will become my equals!’”
 5. {:#n5}<em>Anusudarśana (?)</em>. C. 順善見. The Chinese translates the second seat’s name as “Following Good View.” Alternate Chinese translations of this passage render it as “Smaller Good View” (小善見). It must have been smaller, meant for a servant to sit on, perhaps. I’ve guessed that 順 translates the prefix S. anu-, but I’ve found no Indic parallels to use for confirmation. [\[back\]](#ref5)
 6. {:#n6}<em>Nandana</em>. C. 大喜. The Chinese translates the park’s name as “Great Joy.” In P. and S. sources, a fourth Trāyastriṃśa park is called Nandana, which can mean “rejoicing.” [\[back\]](#ref6)
 7. {:#n7}This list of ten names was transliterated to C. I’ve reconstructed it to possible Sanskrit equivalents. The first four names of this list are more certain than the remainder, which are only educated guesses. There are two other Chinese translations of the list, but after the fourth name, they vary widely with each other. There are no Indic parallels extant to my knowledge. [\[back\]](#ref7)
-8. {:#n8}<em>maiden flowers</em>. Ch. 童女花. Presumably the Indic name of this flower was also a word for girls or young women, but it elludes me. [\[back\]](#ref8)
-9. {:#n9}<em>Earth Sovereign gods</em>. Ch. 地自在天. This is not a standard class of gods that appear anywhere else in DĀ. An alternate Taisho reading changes it to read Paranirmitavaśavartin (他化自在天), but this doesn’t make sense coming after the Akaniṣṭha gods. I’ve left the passage as-is. [\[back\]](#ref9)
+8. {:#n8}<em>maiden flowers</em>. C. 童女花. Presumably the Indic name of this flower was also a word for girls or young women, but it elludes me. [\[back\]](#ref8)
+9. {:#n9}<em>Earth Sovereign gods</em>. C. 地自在天. This is not a standard class of gods that appear anywhere else in DĀ. An alternate Taisho reading changes it to read Paranirmitavaśavartin (他化自在天), but this doesn’t make sense coming after the Akaniṣṭha gods. I’ve left the passage as-is. [\[back\]](#ref9)
 10. {:#n10}<em>cubits</em>. C. 肘. A cubit was an ancient measure of length, taking the average distance from a man’s elbow to the tip of his fingers. It varied from place to place but was approximately 18 inches (45.7 cm). [\[back\]](#ref10)
 11. {:#n11}<em>Adornment gods</em>. C. 嚴飾天. This group of four heavens, which are the fourth dhyāna heavens in this list, appears unique. I’m not sure what the S. equivalent was, so I’ve translated it to English. [\[back\]](#ref11)
 12. {:#n12}This passage has a couple alternate C. translations, but they vary widely from this version, and they are largely translated rather than transliterated. The original Indic is unclear, so I’ve translated the C. names literally. [\[back\]](#ref12)
