--- a/01_agama/ekottarika/01/EA_01_01.md
+++ b/01_agama/ekottarika/01/EA_01_01.md
@@ -525,7 +525,7 @@ For it came from Śākyamuni.”
 
 1. {:#n1} <em>Śākyamuni.</em> C. 能仁. Lit. “The Humane One.” This was an uncommon translation of Śākyamuni.<br/>
 <em>Seventh Sage.</em> This refers to the Buddha being the last of a lineage of seven Buddhas. For sources on the topic, see the <em>Mahāvadāna Sūtra</em> and its parallels ([DĀ 1](../../dirgha/DA_1.html){:target="_blank"}, [DN 14](https://suttacentral.net/dn14){:target="_blank"}, EĀ 48.4, and Taisho 2-4).<br/>
-<em>Unsurpassed law.</em> Ch. 無上軌. Here, S. <em>dharma</em> has been translated as “law” (軌), which is also the meaning of the usual C. translation (法). [\[back\]](#ref1)
+<em>Unsurpassed law.</em> C. 無上軌. Here, S. <em>dharma</em> has been translated as “law” (軌), which is also the meaning of the usual C. translation (法). [\[back\]](#ref1)
 2. {:#n2} <em>four immeasurables.</em> C. 四等(心), S. <em>catvāry-apramāṇāni</em>, P. <em>catasso appamaññāyo</em>. Lit. “four thoroughnesses,” this was a translation of the four immeasurables (kindness, compassion, joy, and equanimity). These were the subjects of a meditative practice also known as the four abodes of Brahma (S. <em>catvāro brahma-vihārāḥ</em>) because it was considered a way to be born in the Brahma Heaven. [\[back\]](#ref2)
 3. {:#n3} It’s notable that Ānanda is not criticized as stupid by Mahākāśyapa in this version of events, nor does his being an arhat or not play a part in his qualification as wise or learned. His deprecation in other accounts vs. his praiseworthiness here may well have been later editorializing by sectarian authors, given that the accounts are so different in this regard. [\[back\]](#ref3)
 4. {:#n4} <em>numberless assembly</em>. Lit. “assembly of 84,000” (C. 八萬四千衆).<br/>
@@ -551,13 +551,13 @@ For it came from Śākyamuni.”
 21. {:#n21} <em>Ekottara.</em> C. 伊倶優多羅 (EMC. i-kɪu ɪəu-ta-la = G. <em>\*ekutara</em>). The G. equivalent of S. <em>Ekottarika</em> is attested as G. <em>Ekutariga</em>. The C. transliteration here looks very close to G. <em>Ekutara</em>, so I’ve adopted the S. equivalent as a best guess.<br/>
 <em>Mukhottara.</em> C. 目伽優多羅 (EMC. mɪuk-k‘ie ɪəu-ta-la = G. <em>\*mukhetara</em>). 目伽 most likely transliterates G. <em>mukha</em>, so I’ve adopted the S. equiv. of G. <em>Mukha+utara</em>.<br/>
 <em>Nagottara.</em> C. 龍優多羅. Here, we have a translation of G. <em>naga</em> (龍) and a transliteration of <em>utara.</em> [\[back\]](#ref21)
-22. {:#n22} <em>Vidyūttara.</em> Ch. 雷電優多羅 (EMC. ɪəu-ta-la = G. utara). Here, we have a translation of “lightning” and a transliteration of G. <em>utara.</em> I’ve guessed S. <em>Vidyūttara</em> as a likely Indic equivalent.<br/>
-<em>Devottara.</em> Ch. 天優多羅. Here, we have a translation of Indic <em>deva</em> and transliteration of G. <em>utara</em>. I’ve adopted the S. equivalent of G. <em>deva+utara</em>.<br/>
+22. {:#n22} <em>Vidyūttara.</em> C. 雷電優多羅 (EMC. ɪəu-ta-la = G. utara). Here, we have a translation of “lightning” and a transliteration of G. <em>utara.</em> I’ve guessed S. <em>Vidyūttara</em> as a likely Indic equivalent.<br/>
+<em>Devottara.</em> C. 天優多羅. Here, we have a translation of Indic <em>deva</em> and transliteration of G. <em>utara</em>. I’ve adopted the S. equivalent of G. <em>deva+utara</em>.<br/>
 <em>Brahmottara.</em> C. 梵優多羅 (EMC. bɪʌm ɪəu-ta-la = G. Braṃmotara). Here, we have a transliteration of G. <em>braṃma+utara</em>. The equivalent would be S. <em>Brahmottara</em>, which is attested in other contexts. [\[back\]](#ref22)
-23. {:#n23} <em>Makhādeva.</em> C. 摩訶提婆 (EMC mua-he-dei-bua = G. <em>Mahadeva</em>), P. <em>Makhādeva</em>, S. <em>Mahādeva</em>. The following avadāna story has parallels in other sources. In Pali, it’s found in Jā 541 and MN 83, where the king’s name is Makhādeva rather than Mahādeva, which is found in S. sources. In Chinese sources, the transliteration in both early and late translations is S. Mahādeva, too (cf. MĀ 67, T152 No. 87, and T211 Ch. 38, and EĀ 50.4). This is interesting insofar as the G. dialect transliterated to C. often changed <em>-kh-</em> to <em>-h-</em>. This raises the possibility that the P. tradition has preserved the original Prakrit pronunciation, while later S. sources did not when translated from G. I’ve adopted the P. equivalent based on this. [\[back\]](#ref23)
+23. {:#n23} <em>Makhādeva.</em> C. 摩訶提婆 (EMC mua-he-dei-bua = G. <em>Mahadeva</em>), P. <em>Makhādeva</em>, S. <em>Mahādeva</em>. The following avadāna story has parallels in other sources. In Pali, it’s found in Jā 541 and MN 83, where the king’s name is Makhādeva rather than Mahādeva, which is found in S. sources. In Chinese sources, the transliteration in both early and late translations is S. Mahādeva, too (cf. MĀ 67, T152 No. 87, and T211 C. 38, and EĀ 50.4). This is interesting insofar as the G. dialect transliterated to C. often changed <em>-kh-</em> to <em>-h-</em>. This raises the possibility that the P. tradition has preserved the original Prakrit pronunciation, while later S. sources did not when translated from G. I’ve adopted the P. equivalent based on this. [\[back\]](#ref23)
 24. {:#n24} <em>Mango Park.</em> C. 甘梨園. We don’t get a full location here, but 甘梨園 was used in T212 for the Amravana of Vaisali, so I assume 甘梨 (lit. “sweet pear”) was intended as an approx. of S. <em>amra</em> (mango). [\[back\]](#ref24)
 25. {:#n25} <em>rainbow.</em> C. 五色光. Lit. “five-colored light.” [\[back\]](#ref25)
-26. {:#n26} <em>barber</em>. Ch. 劫比 (MC. kɪʌp-pii = G. <em>\*kapi-</em>). I’m reading this transliteration as equivalent to P. <em>kappaka</em> (S. <em>kalpaka</em>), meaning a barber. It would fit the Indic parallels to this jātaka story (cf. Jā 541, MN 83). It is possible that this is a personal name that meant “like a barber” (i.e., G. <em>\*Kapika</em>). [\[back\]](#ref26)
+26. {:#n26} <em>barber</em>. C. 劫比 (MC. kɪʌp-pii = G. <em>\*kapi-</em>). I’m reading this transliteration as equivalent to P. <em>kappaka</em> (S. <em>kalpaka</em>), meaning a barber. It would fit the Indic parallels to this jātaka story (cf. Jā 541, MN 83). It is possible that this is a personal name that meant “like a barber” (i.e., G. <em>\*Kapika</em>). [\[back\]](#ref26)
 27. {:#n27} <em>enjoyed</em>. C. 食. Lit. “eaten” or “fed on” (食). [\[back\]](#ref27)
 28. {:#n28} <em>Dīrghāyu.</em> C. 長壽. Translated lit. as “Long Life Span.” There’s another mythical King Dīrghāyu who played a prominent role in a story told to the Kausambi monks in [MĀ 72](../../madhyama/MA_072.html){:target="_blank"}.<br/>
 <em>three muddy roads.</em> C. 三塗. This was an alternate translation of S. <em>trividhā durgatiḥ</em>, also translated as the “three unfortunate destinations” (i.e., rebirth among animals, hungry ghosts, and in hell). It was more commonly translated to C. as 三惡趣 (“three bad destinations”).<br/>
