--- a/01_agama/ekottarika/13/EA_13_05.md
+++ b/01_agama/ekottarika/13/EA_13_05.md
@@ -124,7 +124,7 @@ It’s of interest to note how the list that appears here, in MĀ 93, and in Tai
 This list of twenty-one bonds is also found in two other C. texts known to have been produced by the same translation team that produced EĀ. The first is a translation of an Abhidharma Vibhāṣa (T1547.28.424b6). It appears to reference a scriptural source similar to this <em>sūtra</em> or Taisho 51, though the quotation isn’t sufficient to identify it precisely. The second is a King Aśoka Avadāna text that contains a reference to the twenty-one bonds (T2045.50.172b29).<br/>
 The same translation team headed by Daoan was also said to have translated a version of MĀ that was later lost. T51 is one of a group of independent C. translations that parallel MĀ and EĀ <em>sūtra</em>s and that may actually be remnants of this lost MĀ.<br/>
 Thus, this particular list of twenty-one bonds might be an indication that these texts all belonged to a single branch of early Buddhism. [\[back\]](#ref2)
-3. {:#n3} <em>Sundarastrī</em>. Ch. 孫陀羅諦利 (EMC. suən-da-la-tei-lɪi = G. <em>suṃdarastri</em> = S. <em>sundarastrī</em>). This translit. seems straightforward as S. <em>sundara</em> + <em>strī</em>, lit. meaning “beautiful woman.” The 翻梵語 (T2130.54.1019c24) confirms this reading (“譯曰：陀羅者好，諦利者女”). In other sources, however, he is named after the Sundarikā River, which is a feminine noun in S. This makes me wonder what took place to arrive at this situation. Was the priest a woman in this particular telling of the story, or was this name the result of an overly literal translation of S. <em>sundarīka</em> when the text passed from one Prakrit to another?<br/>
+3. {:#n3} <em>Sundarastrī</em>. C. 孫陀羅諦利 (EMC. suən-da-la-tei-lɪi = G. <em>suṃdarastri</em> = S. <em>sundarastrī</em>). This translit. seems straightforward as S. <em>sundara</em> + <em>strī</em>, lit. meaning “beautiful woman.” The 翻梵語 (T2130.54.1019c24) confirms this reading (“譯曰：陀羅者好，諦利者女”). In other sources, however, he is named after the Sundarikā River, which is a feminine noun in S. This makes me wonder what took place to arrive at this situation. Was the priest a woman in this particular telling of the story, or was this name the result of an overly literal translation of S. <em>sundarīka</em> when the text passed from one Prakrit to another?<br/>
 In MN 7, the priest is called instead P. <em>sundarikabhāradvāja</em>, and simply P. <em>bhāradvāja</em> after he becomes a monk. MĀ 93 has still another name for the priest, translated to C. as 妙好首 (“Chief in Beauty” or “Beautiful Head”). 妙好 could certainly translate S. <em>sundara</em>. 首 could be a translation of S. <em>śīrṣa</em>, <em>śiras</em>, or <em>śrī</em>, which are similar in pronunciation to S. <em>strī</em>. [\[back\]](#ref3)
 
 ---
