--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -141,7 +141,7 @@ next: MA_017.html
 
 1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0438b13" target="_blank">T26.1.438b13-9c22</a>. The direct parallel for this <em>sūtra</em> is [AN 3.65](https://suttacentral.net/an3.65){: target="_blank"}. [\[back\]](#ref1)
 2. {:#n2}<em>country of the Kālāmas</em>. C. <span class="ch">伽藍</span>, MCh k’ie-lam, P/S Kālāma. The Taisho reads <span class="ch">園</span> (“park”), which appears to be an error. I’ve adopted an alternate reading of <span class="ch">國</span> (“country”). \\
-*<em>Keśaputra</em>. Ch. <span class="ch">羇舍子</span>, MC. kɪĕ-ʃɪă-putra, P. Kesamutta. The Chinese is a partial transliteration (<span class="ch">子</span> typically translates P. <em>putta</em>, S. <em>putra</em>). I’ve not located a S. attestation for this place name, so I’ve tentatively reconstructed it given typical Chinese transliterations. [\[back\]](#ref2)
+*<em>Keśaputra</em>. C. <span class="ch">羇舍子</span>, MC. kɪĕ-ʃɪă-putra, P. Kesamutta. The Chinese is a partial transliteration (<span class="ch">子</span> typically translates P. <em>putta</em>, S. <em>putra</em>). I’ve not located a S. attestation for this place name, so I’ve tentatively reconstructed it given typical Chinese transliterations. [\[back\]](#ref2)
 3. {:#n3}<em>causes that are pre-existent</em>. C. <span class="ch">因習本有</span>. I suspect that <span class="ch">因習</span> translates a verb equivalent to P. <em>uppajjati</em> (“to arise, come into being”), which is found in the P. parallel. <span class="ch">本有</span> usually means “inherent existence,” but here with the functional meaning of “pre-existing.” The verb <span class="ch">因習</span> is apparently the participial adjective (“arising pre-existent”), making the expression awkward, but I believe it basically means “pre-existing cause.”
 
 ---
