--- a/01_agama/samyukta/01/SA1_150.md
+++ b/01_agama/samyukta/01/SA1_150.md
@@ -47,12 +47,12 @@ next: SA1_151.html
 <li id="n1">This is <em>sūtra</em> no. 38 in the <cite>Taisho</cite> edition and no. 150 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0008c08" target="_blank">T99.2.8c8-25</a>). It’s parallel with a passage in <a href="https://suttacentral.net/mn139" target="_blank">MN 139</a> on local dialects, <a href="SA1_149.html" target="_blank">SĀ 1.149</a>, and <a href="https://suttacentral.net/sn22.94" target="_blank">SN 22.94</a>. [<a href="#ref1">back</a>]</li>
 <li id="n2">Some of these Indic names are obscure transliterations in Chinese. I’ve consulted suggestions in a Buddhist Chinese glossary (T2130 翻梵語), which reads the transliterations as S., but I notice that the parallel passage in MN 139 appears to be a better guide for reconstructing several of these terms. A couple are still a mystery to me.<br/>
 <em>ghaṭī.</em> C. 揵茨 (EMC. gɪɛn-dzii = G. <em>ghaḍi</em> or <em>gaḍ̱i</em>), P. <em>ghaṭī</em>, S. <em>ghaṭī</em>. This seems a Pr. form for the name of a large water jar.<br/>
-<em>pātra</em>. Ch. 鉢 (EMC. puat = G. <em>pat[ra]</em>), P. <em>patta</em>, S. <em>pātra</em>. This term became the C. translation of the Buddhist alms bowl.<br/>
-<em>pipīla</em>. Ch. 匕匕羅 (EMC. pii-pii-la = Pr. <em>pipila</em>?). S. <em>pipīla</em>? This is the S. name of an ant. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1032c16" target="_blank">T2130.54.1032c16</a>) claims the translit. means a flying insect. It may have been a word derived from an equivalent of P. <em>pivati</em> that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. <em>pisīla</em> instead, which differs from the C. translit. only in the middle consonant. I lean towards the translit. being a corruption of <em>pisīla</em> or an equiv. word.<br/>
-<em>jvāla</em>. Ch. 遮留 (EMC. tʃɪă-lɪəu = Pr. <em>chalu</em> or <em>charu</em>?). The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a12" target="_blank">T2130.54.987a12</a>) says that the translit. means “light” (光). S. <em>jvāla</em> seems closest to this meaning for the translit.; however, <em>rucā</em> is another possibility if the characters were transposed. Neither option seems appropriate for the name of a vessel. I’ve adopted the S. reading indicated by the C. glossary for lack of a better option.<br/>
-<em>vistha</em>. Ch. 毘悉多 (EMC. bii-siĕt-ta = G. <em>*vista</em>?), P. <em>vittha</em>, S. <em>vista</em> or <em>vistha</em>. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a13" target="_blank">T2130.54.987a13</a>) claims that this is the same as a more well-known translit. (婆私吒) for S. <em>vasiṣṭha</em> and translates it as “highest” (最勝). However, the passage in MN 139 has P. <em>vitta</em>, which means possessions or property in general. On the other hand, P. <em>vittha</em> means a drinking bowl, and this appears to be most likely thing for this passage. I’ve adopted the S. equivalent for this last possibility.<br/>
-<em>vacana</em>. Ch. 婆闍那 (EMC. bua-ʒɪă(to)-na = G. <em>vacana</em> or <em>vatona</em>?), S. <em>vacana</em>. The glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a14" target="_blank">T2130.54.987a14</a>) offers an alternative translit. (婆遮那) and translates the term as “speech” (語). There is an alt. pronunciation of 闍 as <em>to</em>. I haven’t discovered a good Indic equivalent for either translit. that was name of a vessel. So, again, I have simply adopted the S. equiv. of the glossary’s suggestion.<br/>
-<em>śarāva</em>. Ch. 薩牢 (EMC. sat-lau = <em>sara</em> or <em>saro</em>?), P. <em>sarāva</em>, S. <em>śarāva</em>. In MN 139, one of the items in the list is <em>sarāva</em>, meaning a “plate, cup, saucer” depending on the source. I’ve adopted its S. equivalent. [<a href="#ref2">back</a>]</li>
+<em>pātra</em>. C. 鉢 (EMC. puat = G. <em>pat[ra]</em>), P. <em>patta</em>, S. <em>pātra</em>. This term became the C. translation of the Buddhist alms bowl.<br/>
+<em>pipīla</em>. C. 匕匕羅 (EMC. pii-pii-la = Pr. <em>pipila</em>?). S. <em>pipīla</em>? This is the S. name of an ant. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1032c16" target="_blank">T2130.54.1032c16</a>) claims the translit. means a flying insect. It may have been a word derived from an equivalent of P. <em>pivati</em> that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. <em>pisīla</em> instead, which differs from the C. translit. only in the middle consonant. I lean towards the translit. being a corruption of <em>pisīla</em> or an equiv. word.<br/>
+<em>jvāla</em>. C. 遮留 (EMC. tʃɪă-lɪəu = Pr. <em>chalu</em> or <em>charu</em>?). The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a12" target="_blank">T2130.54.987a12</a>) says that the translit. means “light” (光). S. <em>jvāla</em> seems closest to this meaning for the translit.; however, <em>rucā</em> is another possibility if the characters were transposed. Neither option seems appropriate for the name of a vessel. I’ve adopted the S. reading indicated by the C. glossary for lack of a better option.<br/>
+<em>vistha</em>. C. 毘悉多 (EMC. bii-siĕt-ta = G. <em>*vista</em>?), P. <em>vittha</em>, S. <em>vista</em> or <em>vistha</em>. The Chinese glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a13" target="_blank">T2130.54.987a13</a>) claims that this is the same as a more well-known translit. (婆私吒) for S. <em>vasiṣṭha</em> and translates it as “highest” (最勝). However, the passage in MN 139 has P. <em>vitta</em>, which means possessions or property in general. On the other hand, P. <em>vittha</em> means a drinking bowl, and this appears to be most likely thing for this passage. I’ve adopted the S. equivalent for this last possibility.<br/>
+<em>vacana</em>. C. 婆闍那 (EMC. bua-ʒɪă(to)-na = G. <em>vacana</em> or <em>vatona</em>?), S. <em>vacana</em>. The glossary (<a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p0987a14" target="_blank">T2130.54.987a14</a>) offers an alternative translit. (婆遮那) and translates the term as “speech” (語). There is an alt. pronunciation of 闍 as <em>to</em>. I haven’t discovered a good Indic equivalent for either translit. that was name of a vessel. So, again, I have simply adopted the S. equiv. of the glossary’s suggestion.<br/>
+<em>śarāva</em>. C. 薩牢 (EMC. sat-lau = <em>sara</em> or <em>saro</em>?), P. <em>sarāva</em>, S. <em>śarāva</em>. In MN 139, one of the items in the list is <em>sarāva</em>, meaning a “plate, cup, saucer” depending on the source. I’ve adopted its S. equivalent. [<a href="#ref2">back</a>]</li>
 </ol>
 <hr/>
 
