--- a/01_agama/samyukta/01/SA1_172.md
+++ b/01_agama/samyukta/01/SA1_172.md
@@ -240,9 +240,9 @@ All of this is somewhat confounding, and apparently it was intended to be for so
 <li id="n3"><em>set out a footstool for washing his feet</em>. C. 洗足安停脚机. This expression only occurs in this and the previous <em>sūtra</em> in SĀ. It must refer to the practice of setting out water and a stool for a guest to washing their feet. There are similar expressions in Pali sources such as <em>pādodaka pādapīṭha pādakaṭhalika upanikkhipi</em> (“to set out foot water, a footstool, and foot towel(?)”). The third item is somewhat obscure in Pali and has different competing interpretations such as a towel, a wash bowl, a second stool, or a scraper. There is no third item here, and there is no reference to foot washing in SĀ 1.171, either. Taking all of this together, I’ve chosen to read 洗足 as a modifier that expresses the purpose of the footstool even though it’s actually in an adverbial position in the text as we have it. [<a href="#ref3">back</a>]</li>
 <li id="n4"><em>see form as self, other than self, or either of them present in the other</em>. C. 於中見我、異我、相在. I take the last item in this list as lit. meaning “present in each other.” The result is that there are actually four options being listed here: seeing self as identical to form, self as different than form, self as in form, or form as in self.<br/>
 In SN 22.85, Sāriputta immediately brings the analysis of the Tathāgata to bear, asking if he could be regarded as in form, distinct from form, as possessing form, or being without form. Later, when a noble disciple’s view of the aggregates is discussed, SN 22.85 offers four alternatives that are a little different: “They don’t regard form as self, self as having form, form in self, or self in form” (<em>na rūpaṁ attato samanupassati, na rūpavantaṁ attānaṁ; na attani rūpaṁ, na rūpasmiṁ attānaṁ</em>). These last two items agree with the way I interpret the expression 相在 as “present in each other.” [<a href="#ref4">back</a>]</li>
-<li id="n5"><em>The Tathāgata in the present life truly abides thus as nothing found and nothing postulated.</em>. Ch. 如來見法真實、如住，無所得、無所施設, P. <em>diṭṭheva dhamme saccato thetato tathāgate anupalabbhiyamāne</em>. The C. is nearly identical to the P. parallel here, but there are a couple minor differences. First, Tathāgata (如來) has been moved to the normal subject position for C. Second, where SN 22.85 reads <em>thetato</em>, the C. probably translates a word equiv. to S. <em>tathāsthita</em> (G. <em>tasaṭ́hida</em>). These words in P., G., and S. are similar in pronunciation. The variation here results in the P. passage offering a synonym for <em>saccato</em>, while the Āgama says that the Tathāgata stands “thus,” i.e., in a ineffable state. The third difference is that here 無所施設 (G. <em>apraṃñati</em> > P. <em>apaññatti</em> > S. <em>aprajñapti</em>?) is offered as a synonym for 無所得 (S. <em>anupalambha</em> “nothing perceived” or more literally <em>aprāpti</em> “nothing apprehended”).<br/>
+<li id="n5"><em>The Tathāgata in the present life truly abides thus as nothing found and nothing postulated.</em>. C. 如來見法真實、如住，無所得、無所施設, P. <em>diṭṭheva dhamme saccato thetato tathāgate anupalabbhiyamāne</em>. The C. is nearly identical to the P. parallel here, but there are a couple minor differences. First, Tathāgata (如來) has been moved to the normal subject position for C. Second, where SN 22.85 reads <em>thetato</em>, the C. probably translates a word equiv. to S. <em>tathāsthita</em> (G. <em>tasaṭ́hida</em>). These words in P., G., and S. are similar in pronunciation. The variation here results in the P. passage offering a synonym for <em>saccato</em>, while the Āgama says that the Tathāgata stands “thus,” i.e., in a ineffable state. The third difference is that here 無所施設 (G. <em>apraṃñati</em> > P. <em>apaññatti</em> > S. <em>aprajñapti</em>?) is offered as a synonym for 無所得 (S. <em>anupalambha</em> “nothing perceived” or more literally <em>aprāpti</em> “nothing apprehended”).<br/>
 It’s difficult to overstate the importance of this passage and others like it in steering the philosophical development of Buddhism away from the binary states of “existent” and “non-existent” and towards a philosophy of the ineffability of all things. In this particular passage and context, however, the subject is only the Tathāgata (and, by extension, <em>arhat</em>s who had passed away). One is left to wonder whether this was, in fact, a description of the Tathāgata after his passing away from the world, given that the natural tendency would have been to deify him as was the custom in ancient times. The conclusion was that he did not exist in a state that could be comprehended by the experiences of this world (as delineated by the five aggregates), but neither was he apart from them. His status was simply undefinable. [<a href="#ref5">back</a>]</li>
-<li id="n6"><em>appropriate statement</em>. Ch. 時說, P. <em>kallaṁ … veyyākaraṇaṁ</em>. The C. lit. means “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ.” P. <em>kalla</em> (S. <em>kalya</em>), which means “appropriate, valid, legitimate,” becomes G. <em>kala</em>. This could’ve easily been mistaken for S. <em>kāla</em>, which would explain its trans. here as 時. [<a href="#ref6">back</a>]</li>
+<li id="n6"><em>appropriate statement</em>. C. 時說, P. <em>kallaṁ … veyyākaraṇaṁ</em>. The C. lit. means “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ.” P. <em>kalla</em> (S. <em>kalya</em>), which means “appropriate, valid, legitimate,” becomes G. <em>kala</em>. This could’ve easily been mistaken for S. <em>kāla</em>, which would explain its trans. here as 時. [<a href="#ref6">back</a>]</li>
 </ol>
 <hr/>
 
