--- a/01_agama/samyukta/35/SA35_1.md
+++ b/01_agama/samyukta/35/SA35_1.md
@@ -65,7 +65,7 @@ The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma ey
 ### Notes
 
 1. {:#n1} This sūtra has a similar format as [SN 22.150 to 158](https://suttacentral.net/sn22.150){:target="_blank"} and [SN 24](https://suttacentral.net/sn24){:target="_blank"}, but it doesn’t have a direct parallel among them. Instead, it takes up the six abodes of views found in [MN 22](https://suttacentral.net/mn22){:target="_blank"} and [MĀ 200](..\..\madhyama\MA_200.html){:target="_blank"}. As we shall see, this sets the tone for the remainder of this <em>saṃyukta</em>, which segues to sūtras about specific views like the suttas that make up [SN 24](https://suttacentral.net/sn24){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} <em>remembered, considered, examined</em>. Ch. 隨憶、隨覺、隨觀. I surmise that the Indic words are probably verbs with the roots <em>anusmṛ-</em>, <em>anuvitark-</em>, <em>anuvicār-</em>, meaning roughly, “remembered,” “(initially) considered,” and “(thoroughly) examined.” Note how the Chinese translator uses 覺 for <em>vitark-</em> here as he would in the <em>dhyāna</em> formula, perhaps attempting to indicate a shallow or initial consideration. “Perceiving” doesn’t really fit this context given the items covering it at the beginning of the list. [\[back\]](#ref2)
+2. {:#n2} <em>remembered, considered, examined</em>. C. 隨憶、隨覺、隨觀. I surmise that the Indic words are probably verbs with the roots <em>anusmṛ-</em>, <em>anuvitark-</em>, <em>anuvicār-</em>, meaning roughly, “remembered,” “(initially) considered,” and “(thoroughly) examined.” Note how the Chinese translator uses 覺 for <em>vitark-</em> here as he would in the <em>dhyāna</em> formula, perhaps attempting to indicate a shallow or initial consideration. “Perceiving” doesn’t really fit this context given the items covering it at the beginning of the list. [\[back\]](#ref2)
 
 ---
 
