--- a/01_agama/madhyama/MA_210.md
+++ b/01_agama/madhyama/MA_210.md
@@ -261,9 +261,9 @@ The nun Dharmadinnā answered, “Madam, you’re asking about an endless subjec
 ### Notes
 1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0788a14" target="_blank">T26.1.788a14-90b6</a>. The Pali parallel to this <em>sūtra</em> is <a href="https://suttacentral.net/mn44" target="_blank">MN 44</a>. [\[back\]](#ref1)
 2. {:#n2} <em>laywoman Viśākhā</em>. Some sources, such as MN 44 and the later <cite>Mahāvibhāṣā</cite> translation by Xuanzang, have a man named Viśākha as Dharmadinnā’s interlocutor, but there are also sources that agree with this version. Some sources say the laywoman Viśākhā had a husband named Viśākha, and others say it was Dharmadinnā who had a husband (or nearly married a man) by this name. These backstories appear to have become a bit confused over time, though they all agree on Viśākha as the name of the interlocutor (just not on the name’s gender). [\[back\]](#ref2)
-3. {:#n3} <em>oneself</em>. Ch. <span class="ch">自身</span>, S. <em>svakāya</em>, P. <em>sakkāya</em>. A literal reading of the Chinese might be ‘own body,’ but as we shall see, it’s defined as equivalent to a person or individual that includes all five aggregates. [\[back\]](#ref3)
-4. {:#n4} <em>proliferating aggregates</em>. Ch. <span class="ch">盛陰</span>, P. <em>upādāna-khandha</em>. <span class="ch">盛</span> was an early translation of <em>upādāna</em> in the expression P. <em>upādāna-khandha</em>. In normal contexts, <span class="ch">盛</span> has positive meanings like “flourishing, prosperous, waxing.” I take it here to mean something that multiplies or accumulates. [\[back\]](#ref4)
-5. {:#n5} <em>right method</em>. Ch. <span class="ch">正方便</span>, P. <em>samma-padhāna</em>. This term and right abandonment (<em>samyak-prahāṇa</em>) below are different names for the same practice called right effort in Pali sources. Note that right effort is placed in the category of samādhi in MN 44 rather than in the category of wisdom here.[\[back\]](#ref5)
+3. {:#n3} <em>oneself</em>. C. <span class="ch">自身</span>, S. <em>svakāya</em>, P. <em>sakkāya</em>. A literal reading of the Chinese might be ‘own body,’ but as we shall see, it’s defined as equivalent to a person or individual that includes all five aggregates. [\[back\]](#ref3)
+4. {:#n4} <em>proliferating aggregates</em>. C. <span class="ch">盛陰</span>, P. <em>upādāna-khandha</em>. <span class="ch">盛</span> was an early translation of <em>upādāna</em> in the expression P. <em>upādāna-khandha</em>. In normal contexts, <span class="ch">盛</span> has positive meanings like “flourishing, prosperous, waxing.” I take it here to mean something that multiplies or accumulates. [\[back\]](#ref4)
+5. {:#n5} <em>right method</em>. C. <span class="ch">正方便</span>, P. <em>samma-padhāna</em>. This term and right abandonment (<em>samyak-prahāṇa</em>) below are different names for the same practice called right effort in Pali sources. Note that right effort is placed in the category of samādhi in MN 44 rather than in the category of wisdom here.[\[back\]](#ref5)
 
 ---
 
